[gd_scene load_steps=4 format=3 uid="uid://bmxf7kdhjlip6"]

[ext_resource type="PackedScene" uid="uid://dkprjbptror6n" path="res://components/StyledPopupWindow/StyledPopupWindow.tscn" id="1_dmoyl"]
[ext_resource type="PackedScene" uid="uid://t8s6xh1ax7uy" path="res://scenes/UI/PrimaryButton.tscn" id="2_ngx7o"]
[ext_resource type="Script" uid="uid://csdajb1e07h18" path="res://scenes/LobbiesView/CreateLobbyPopup.gd" id="2_oyj73"]

[node name="CreateLobbyPopup" instance=ExtResource("1_dmoyl")]
title = "CREATE LOBBY"
size = Vector2i(356, 245)
visible = false
script = ExtResource("2_oyj73")

[node name="VB" parent="." index="1"]
offset_right = 352.0
offset_bottom = 241.0

[node name="Title" parent="VB/PanelContainer/TitleBar" index="0"]
text = "CREATE LOBBY"

[node name="BucketId" type="LineEdit" parent="VB/MC/VB" index="0"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Bucket Id"

[node name="HBoxContainer" type="HBoxContainer" parent="VB/MC/VB" index="1"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MapOptionBtn" type="OptionButton" parent="VB/MC/VB/HBoxContainer" index="0"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="MaxPlayersOptionsBtn" type="OptionButton" parent="VB/MC/VB/HBoxContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="HFlowContainer" type="HFlowContainer" parent="VB/MC/VB" index="2"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8

[node name="PublicCheckBox" type="CheckBox" parent="VB/MC/VB/HFlowContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Public"

[node name="AllowInvitesCheckBox" type="CheckBox" parent="VB/MC/VB/HFlowContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Allow Invites"

[node name="PresenceCheckBox" type="CheckBox" parent="VB/MC/VB/HFlowContainer" index="2"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "Presence"

[node name="RTCVoiceRoomCheckBox" type="CheckBox" parent="VB/MC/VB/HFlowContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
button_pressed = true
text = "RTC Voice Room"

[node name="CreateLobbyBtn" parent="VB/MC/VB" index="3" instance=ExtResource("2_ngx7o")]
unique_name_in_owner = true
layout_mode = 2
text = "Create"
